add id and new div element for ex 8

--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
                                         <div class="content">
                                             <img src="http://davincid.weebly.com/uploads/4/7/6/1/47614109/2304036.jpg?1424892943" alt="">
                                             <div class="event">
-                                                <h3 class="title">The Gutenberg Printing Press</h3>
-                                                One of the greatest inventions of the Renaissance was The Gutenberg Printing Press. Gutenberg took the idea of printing from Asia but made it much easier and more efficient with his press. The first books he printed were Bibles, and they were all sold before he even finished them. The printing press fanned the flames of reading and education.
+                                                <h3 class="title" id="showBooks">The Gutenberg Printing Press</h3>
+                                                <div id="mustRead"></div>
+                                                One of the greatest inventions of the Renaissance was The Gutenberg Printing Press. Gutenberg took the idea of printing from Asia but made it more efficient with his press. The first books he printed were Bibles, and they were all sold before he even finished them. The printing press fanned the flames of reading and education.
                                             </div>
                                     </div>    
                                 </div>
